--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -672,6 +672,7 @@ border-bottom-color: #3D5C9A;
 
 @media (min-width: 768px) {
     /* Pull out the header and footer */
+
     .masthead {
         position: fixed;
         top: 0;
@@ -690,6 +691,9 @@ border-bottom-color: #3D5C9A;
     .cover-container {
         width: 100%; /* Must be percentage or pixels for horizontal alignment */
     }
+    .footer_flow{
+        width: 100%;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -701,6 +705,9 @@ border-bottom-color: #3D5C9A;
     .searchbg{
         width:1200px;
 
+    }
+    .footer_flow{
+        width:1200px;
     }
 }
 
