--- a/bootstrap/css/main4.css
+++ b/bootstrap/css/main4.css
@@ -1,67 +1,83 @@
-#flow{
-}
-#flow #info_str{
+#info_str{
     filter:alpha(opacity=90);
     opacity:0.9;
     right: 7%;
     top:88.5%;
     position: fixed;
-    z-index: 1000;
+    z-index: 1049;
     display:none
 }
-#flow #show_info{
+#show_info{
     filter:alpha(opacity=90);
     opacity:0.9;
     right: 5%;
     top:88%;
-    position:
-    fixed;z-index: 1000
+    position: fixed;
+    z-index: 1049
 }
 
-#flow #top_str{
+#top_str{
     filter:alpha(opacity=90);
     opacity:0.9;
     right: 7%;
     bottom:13.5%;
     position: fixed;
-    z-index: 1000;
+    z-index: 1049;
     display:none
 }
-#flow #to_top{
+#to_top{
     filter:alpha(opacity=90);
     opacity:0.9;
     right: 5%;
     bottom:13%;
     position: fixed;
-    z-index: 1000
+    z-index: 1049
 }
-#flow #mask{
-    background: #ffffff;
+.footer_flow{
+    /*position: absolute;*/
+    /*left: 0;*/
+    /*right: 0;*/
+    /*top: 0;*/
+    /*bottom: 0;*/
+    /*background-color: #000;*/
+    /*opacity: .3;*/
+    background: #000;
+    opacity: 0.75;
+    filter: alpha(opacity=75);
+    height:1000px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top:0;
+    z-index: 1041;
+    display: none;
+}
+.footer_flow #mask{
+    background: #fff;
     opacity:1;
     filter:alpha(opacity=100);
     position:fixed;
     bottom:0;
-    left:30px;
-    right:30px;
+    left:60px;
+    right:60px;
     width:auto;
     height:280px;
-    padding-right:20px;
-    z-index: 900;
-    display: none;
+    z-index: 1042;
+
 }
-#flow #mask .closePop{
-    width: 30px;
-    height: 30px;
+.footer_flow #mask .closePop{
+    width: 24px;
+    height: 24px;
     position: absolute;
     cursor: pointer;
     background: url(../images/close.png) no-repeat;
     right: 10px;
     top:10px;
-    z-index: 950;
+    z-index: 1043;
 }
-#flow #mask .popContent{
+.footer_flow #mask .popContent{
     position:fixed;
-    z-index: 950;
+    z-index: 1043;
 }
 
 #share a.bds_weixin:hover{
@@ -184,6 +200,66 @@
 #searchCountry a:hover{
    text-decoration: underline;
 
+}
+.result_container{
+    margin-top: 10px;
+    display: inline-block;
+    height:260px;
+    width: 100%;
+    background: #fff;
+
+}
+.result_container .result_img{
+    float: left;
+    width: 340px;
+    height: 100%;
+    display: inline-block;
+}
+.result_container .result_img img{
+    float:left;
+    margin-top: 40px;
+    width: 320px;
+    height: 180px;
+    display: inline-block;
+}
+.result_container .result_content{
+    margin:0 auto;
+    text-align:left;
+    float: left;
+    height: 100%;
+    width: 800px;
+    overflow: hidden;
+    white-space:normal;
+    word-break:break-all;
+    display: inline-block;
+}
+.result_content .content_title{
+    font-size: 17px;
+    color: #808080;
+    font-family: "Microsoft YaHei" ! important;
+    text-align:left;
+    margin-top: 40px;
+
+}
+.result_content .content_remark{
+    font-size: 14px;
+    color: #808080;
+    font-family: "Microsoft YaHei" ! important;
+    margin-top: 10px;
+    text-align:left;
+    overflow: hidden;
+    white-space:normal;
+    word-break:break-all;
+
+}
+.result_container .result_tag{
+    float: right;
+    height: 100%;
+    width: 60px;
+    color:#808080;
+    font-size: 15px;
+    margin-top: 40px;
+    display: inline-block;
 }
 
 
