--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -124,7 +124,7 @@
 .callbacks_nav {
   position: absolute;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  top: 60%;
+  top: 53%;
   left: 0;
   opacity: 0.3;
   z-index: 3;
@@ -210,7 +210,7 @@ background: transparent url("color.gif") no-repeat left top;
   .music-callbacks_nav.next:hover{
   left: auto;
   background-position: right top;
-  right: 0;
+  right: 15px;
   }
 .musicsearch{
 	margin-top:30px;
@@ -248,15 +248,15 @@ background: transparent url("color.gif") no-repeat left top;
 .music-callbacks_nav {
   position: absolute;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  top: 60%;
-  left: 0;
+  top: 51%;
+  left:15px;
   opacity: 0.3;
   z-index: 3;
   text-indent: -9999px;
   overflow: hidden;
   text-decoration: none;
   height: 61px;
-  width: 38px;
+  width: 30px;
   background: transparent url("white.gif") no-repeat left top;
   margin-top: -45px;
   }
@@ -268,8 +268,9 @@ background: transparent url("color.gif") no-repeat left top;
 .music-callbacks_nav.next {
   left: auto;
   background-position: right top;
-  right: 0;
+  right: 15px;
   }
+
 @media screen and (max-width:600px) {
   .music-callbacks_nav {
     top: 100%;
