adjust some div width/ footer & platform need imgs

--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -1,7 +1,7 @@
 /*
  * About
  */
- .subtitle{
+ .aboutsubtitle{
     background-color: #C4C4C4;
     border: 1px ;
     margin-bottom: 0;
@@ -561,11 +561,13 @@ margin-left:0px;
  * footer
  */
  .footertype{
- font-size:10px;
- font-weight:600;
- color:#808080;
  margin-left:40px;
- text-align:left;
+ height:auto;
+ }
+ .footertype img{
+ width:55px;
+ height:auto;
+ margin-right:20px;
  
  }
  .footerdetials{
@@ -578,28 +580,7 @@ margin-left:0px;
  color:#808080;
  margin-top:8px;
  }
- .footerleftdiv2{
-    display:inline;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    float:left;
-    width:15%;
-    border-right: 1px solid #bbbbbb;
-    height:230px;
-}
- .footerdetials2{
- margin-top:20px;
- margin-left:50px;
- text-align:left;
- }
-  .footertype2{
- font-size:10px;
- font-weight:600;
- color:#808080;
- margin-left:50px;
- text-align:left;
- 
- }
+
  .footerlogos{
  margin-right:5px;
  }
@@ -607,44 +588,7 @@ margin-left:0px;
  width:18px;
  height:auto;
  }
- .footerlogos2{
-  margin-right:5px;
- }
-  .footerlogos2 img{
- width:18px;
- height:auto;
- }
- .footertype3{
- font-size:10px;
- font-weight:600;
- color:#808080;
- margin-left:0px;
- text-align:left;
  
- }
-.footerdetials3{ 
- margin-left:95px;
- text-align:left;
- }
- .footerdh{
- margin-left:30px;
- margin-right:10px;
- }
- .footerdh img{
-  width:50px;
- height:auto;
- margin-top:5px;
- margin-bottom:-20px;
- }
- .footerleftdiv3{
-    display:inline;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    float:left;
-    width:18%;
-    border-right: 1px solid #bbbbbb;
-    height:230px;
-}
 .searchbg{
 	width:100%;
 }
