--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -589,6 +589,8 @@ margin-left:0px;
  height:auto;
  }
  
-.searchbg{
-	width:100%;
+.plat-map img{
+	width:1200px;
+	height:auto;
+	margin-bottom:20px;
 }
