--- a/bootstrap/css/main3.css
+++ b/bootstrap/css/main3.css
@@ -157,3 +157,9 @@ input[type="checkbox"]:checked {
        
      }
  }
+ .footertype img {
+     width: 155px;
+     height: 60px;
+     margin-left: -50px;
+     margin-right: 20px;
+ }
