--- a/bootstrap/css/main3.css
+++ b/bootstrap/css/main3.css
@@ -157,3 +157,9 @@ input[type="checkbox"]:checked {
        
      }
  }
+ .footertype img {
+     width: 155px;
+     height: 60px;
+     /* margin-right: 20px; */
+     margin-left: -35%;
+ }
