--- a/bootstrap/css/main4.css
+++ b/bootstrap/css/main4.css
@@ -54,8 +54,7 @@
 }
 .footer_flow #mask{
     background: #fff;
-    opacity:1;
-    filter:alpha(opacity=100);
+
     position:fixed;
     bottom:0;
     left:60px;
@@ -178,7 +177,8 @@
     color: #000;
 }
 #searchAToZ a{
-    color:#333333;
+    height:30px;
+    color:#808080;
     float:left;
     margin-left: 20px;
 
@@ -188,11 +188,11 @@
 
 }
 .searchdetailarea{
-    height:50px;
+    height:60px;
 }
 #searchCountry a{
     padding: 2px 5px 2px 5px;
-    color: #383838;
+    color: #808080;
     float:left;
     font-style: normal;
 
@@ -259,6 +259,7 @@
     color:#808080;
     font-size: 15px;
     margin-top: 40px;
+    margin-right: 0;
     display: inline-block;
 }
 
