--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -481,7 +481,8 @@ margin-left:0px;
 #share a.bds_sqq{background:url(../../bootstrap/images/qq.png)no-repeat;background-size:25px 25px;}
  
 #sharetext{
-	font-size:15px;
+	font-size:12px;
+	color:color:#626262;
 }
   /*
  * partner
