--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -474,7 +474,7 @@ margin-left:0px;
  width:auto;
  }
 
-#share a{width:30px;height:30px;padding:0;margin:6px;}
+#share a{width:30px;height:30px;margin-left:10px;margin-right:10px;}
 #share a.bds_weixin{background:url(../../bootstrap/images/wx.png)no-repeat;background-size:25px 25px;}
 #share a.bds_tsina{background:url(../../bootstrap/images/sn.png)no-repeat;background-size:25px 25px;}
 #share a.bds_qzone{background:url(../../bootstrap/images/qz.png)no-repeat;background-size:25px 25px;}
@@ -483,6 +483,7 @@ margin-left:0px;
 #sharetext{
 	font-size:12px;
 	color:color:#626262;
+	margin-top:10px;
 }
   /*
  * partner
@@ -607,7 +608,6 @@ margin-left:0px;
 /*   awoeinner   */
 .awoeinner-subtitle{
     background-color:#00376f;
-    margin-bottom: -1px;
     margin-top: 0;
     padding:15px;
     font-size:20px;
@@ -621,15 +621,30 @@ margin-left:0px;
  height:70px;
  width:auto;
  }
- 
+ .awoevideoarea{
+    margin-bottom: 20px;
+    width:100%;
+    height:700px;
+
+}
+.awoevideoarea video{
+    margin-top: -25px;
+    width:100%;
+    height:700px;
+}
  /* musicinner */
-.musicinner-subtitle div{
-    background:url(bootstrap/images/musicinner.png);
+.musicinner-subtitle{
+    background-color:#c0c0c0;
+    margin-top: 0;
+    padding:15px;
+    font-size:20px;
+    color:#555555;
+    height:50px;
     
  }
  .musicinner-subtitle img{
  float:left;
- margin-top:-25px;
- height:70px;
+ margin-top:-15px;
+ height:45px;
  width:auto;
  } 
