--- a/bootstrap/css/main3.css
+++ b/bootstrap/css/main3.css
@@ -56,10 +56,6 @@
 .searchdetailarea {
     background-color: #e8e8e8;
 }
-.glyphicon {
-    top: 3px;
-    right: 2px;
-}
 .iconcust{
     color:#808399;
 }
@@ -110,11 +106,17 @@ input[type="checkbox"]:checked {
      position:relative;
  }
  .searchcontentdiv {
-     display: inline-block;
-     width: 150px;
-     text-align:center;
-     color: #808080;
-     border: 1px solid #A9A9A9;
+    display: inline-block;
+    text-align:center;
+    color: #808080;
+    width:auto;
+    height:20px;
+    border:1px solid #808080;
+    padding-left:5px;
+    padding-right:5px;
+    margin-left: 10px;
+    margin-right:10px;
+    margin-bottom:10px;
  }
  #searchMsg{
      float:left;
@@ -134,6 +136,7 @@ input[type="checkbox"]:checked {
  .glyphicon{
       top:2px;
       right:0px;
+      left:2px;
  }
  .dropdowndepart{
     min-width: 60px;
