--- a/bootstrap/css/main4.css
+++ b/bootstrap/css/main4.css
@@ -189,7 +189,7 @@
     color:#626262;
 }
 #searchAToZ a{
-    height:30px;
+    height:10px;
     color:#808080;
     float:left;
     margin-left: 20px;
@@ -199,14 +199,12 @@
     text-decoration: underline;
 
 }
-.searchdetailarea{
-    height:60px;
-}
 #searchCountry a{
     padding: 2px 5px 2px 5px;
     color: #808080;
     float:left;
     font-style: normal;
+    margin-top:-5px;
 
 }
 #searchCountry a:hover{
