--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -632,17 +632,12 @@ margin-left:0px;
 }
  /* musicinner */
 .musicinner-subtitle{
-    background-color:#c0c0c0;
-    margin-top: 0;
-    padding:15px;
-    font-size:20px;
-    color:#555555;
+  
     height:50px;
     
  }
  .musicinner-subtitle img{
- float:left;
- margin-top:-15px;
- height:45px;
- width:auto;
+
+ height: inherit;
+ width: inherit;
  } 
