--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -632,12 +632,11 @@ margin-left:0px;
 }
  /* musicinner */
 .musicinner-subtitle{
-  
+	position: relative;
     height:50px;
     
  }
  .musicinner-subtitle img{
-
  height: inherit;
- width: inherit;
+ width: 100%;
  } 
