--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -634,7 +634,7 @@ margin-left:0px;
 .musicinner-subtitle{
 	position: relative;
     height:50px;
-    
+    margin-bottom:-1px;
  }
  .musicinner-subtitle img{
  height: inherit;
