--- a/manage/css/sb-admin.css
+++ b/manage/css/sb-admin.css
@@ -303,3 +303,66 @@ ul.alert-dropdown {
 	margin-top:20px;
 	margin-left:30px;
 }
+/* caselist */
+.cl-div{
+	margin-top:20px;
+	margin-left:10px;
+	margin-right:10px;
+	padding-bottom:10px;
+	border-bottom:1px solid #c0c0c0;
+}
+.cl-title{
+	width:100px;
+	height:30px;
+	padding-top:5px;
+}
+.cl-querybtn{
+	margin-left:30px;
+	height:30px;	
+}
+.cl-input{
+	height:30px;
+}
+.cl-table{
+	margin-top:20px;
+	margin-left:10px;
+	margin-rifht:10px;
+}
+.cl-imgname{
+	width:15%;
+	height:60px;
+	border-bottom:1px solid #d8d8d8;
+}
+.cl-imgadd{
+	width:25%;
+	height:60px;
+	border-bottom:1px solid #d8d8d8;
+}
+.cl-imgtype{
+	width:15%;
+	height:60px;
+	border-bottom:1px solid #d8d8d8;
+}
+.cl-imgseq{
+	width:10%;
+	height:60px;
+	border-bottom:1px solid #d8d8d8;
+}
+.cl-imgseqinput{
+	width:50px;
+	
+}
+.cl-imgmini{
+	width:15%;
+	margin-left:10px;
+	height:60px;
+	border-bottom:1px solid #d8d8d8;
+}
+.cl-imgedit{
+	width:15%;
+	height:60px;
+	border-bottom:1px solid #d8d8d8;
+}
+.cl-imgeditbtn{
+	margin-right:10px;
+}
