--- a/manage/css/sb-admin.css
+++ b/manage/css/sb-admin.css
@@ -19,12 +19,14 @@ body {
 
 #wrapper {
     padding-left: 0;
+     width: 100%;
 }
 
 #page-wrapper {
     width: 100%;
     padding: 0;
     background-color: #fff;
+    height:auto;
 }
 
 .huge {
@@ -327,6 +329,8 @@ ul.alert-dropdown {
 	margin-top:20px;
 	margin-left:10px;
 	margin-rifht:10px;
+	background-color:#fff;
+	width:100%;
 }
 .cl-imgname{
 	width:15%;
@@ -365,4 +369,69 @@ ul.alert-dropdown {
 }
 .cl-imgeditbtn{
 	margin-right:10px;
+}
+/* videolist*/
+.vl-imgname{
+	width:15%;
+	height:60px;
+	border-bottom:1px solid #d8d8d8;
+}
+.vl-imgadd{
+	width:30%;
+	height:60px;
+	border-bottom:1px solid #d8d8d8;
+}
+.vl-imgfirst{
+	width:5%;
+	padding-left:40px;	
+	height:60px;
+	border-bottom:1px solid #d8d8d8;
+}
+.vl-imglang{
+	width:5%;
+	padding-left:30px;
+	height:60px;
+	border-bottom:1px solid #d8d8d8;
+}
+.vl-imgseqinput{
+	width:50px;
+
+}
+.vl-imgseq{
+	width:10%;
+	height:60px;
+	padding-left:30px;
+	border-bottom:1px solid #d8d8d8;
+}
+.vl-imgmini{
+	width:15%;
+	height:60px;
+	padding-left:30px;
+	border-bottom:1px solid #d8d8d8;
+}
+.vl-imgedit{
+	width:15%;
+	height:60px;
+	border-bottom:1px solid #d8d8d8;
+}
+.vl-title1{
+	
+}
+.vl-title2{
+	
+}
+.vl-title3{
+	padding-left:30px;
+}
+.vl-title4{
+	padding-left:20px;
+}
+.vl-title5{
+	padding-left:30px;
+}
+.vl-title6{
+	padding-left:30px;
+}
+.vl-title7{
+	
 }
