--- a/bootstrap/css/smallScreen.css
+++ b/bootstrap/css/smallScreen.css
@@ -424,4 +424,56 @@
     #show_info{
         display: none;
     }
+
+    .subtitle {
+        width: 100%;
+        height: auto;
+        background-color: #E0E0E0;
+        margin-top: -20px;
+        margin-bottom: 0;
+        padding: 0;
+        font-size: 20px;
+        color: #808080;
+    }
+    .subtitle .ulinnera {
+        background: #d4d4d4;
+        height: auto;
+        width: 100%;
+        font-size: 10px;
+        overflow: hidden;
+        white-space: normal;
+        word-break: break-all;
+        float: left;
+        padding: 0;
+        display: inline-block;
+        border-right: 1px solid #A0A0A0;
+        color: #626262;
+    }
+    .subtitle .ulinnerc {
+        height: 50px;
+        width: 20%;
+        font-size: 10px;
+        display: inline-block;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        border-right: 1px solid #808080;
+        padding: 0;
+        float:left
+    }
+    .subtitle .ulinnerb {
+        height: 65px;
+        width: 80%;
+        font-size: 10px;
+        overflow: hidden;
+        text-align: center;
+        white-space: normal;
+        word-break: break-all;
+        float: right;
+        display: inline-block;
+        padding: 0;
+    }
+    #sharetext {
+        font-size: 12px;
+        margin-top: 2px;
+    }
 }
