--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -125,16 +125,16 @@
   position: absolute;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   top: 53%;
-  left: 0;
+  left: -2px;
   opacity: 0.3;
   z-index: 3;
   text-indent: -9999px;
   overflow: hidden;
   text-decoration: none;
-  height: 61px;
+  height: 38px;
   width: 38px;
-  background: transparent url("themes2.gif") no-repeat left top;
-  margin-top: -45px;
+  background: transparent url("http://static.acmedynasty.com/images/home_left.png") no-repeat left top;
+  margin-top: -32px;
   }
 
 .callbacks_nav:active {
@@ -143,7 +143,8 @@
 
 .callbacks_nav.next {
   left: auto;
-  background-position: right top;
+  background: transparent url("http://static.acmedynasty.com/images/home_right.png") no-repeat right top;
+
   right: 0;
   }
 @media screen and (max-width:600px) {
@@ -258,6 +259,7 @@ background: transparent url("color.gif") no-repeat left top;
   text-decoration: none;
   height: 61px;
   width: 30px;
+
   background: transparent url("white.gif") no-repeat left top;
   margin-top: -45px;
   }
