--- a/bootstrap/css/smallScreen.css
+++ b/bootstrap/css/smallScreen.css
@@ -42,7 +42,7 @@
         left: 0;
         width:100%;
         margin: 0 0 0 0 ;
-        height:60px;
+        height:auto;
     }
 
     .masthead_ul ul{
@@ -73,7 +73,7 @@
         height: 100%;
         width: 100%;
         margin: 0;
-        font-size: 15px;
+        font-size: 12px;
         font-weight: 500;
         color: #808080;
         padding: 0;
@@ -103,7 +103,7 @@
         height: 100%;
         width: 100%;
         margin: 0;
-        font-size: 15px;
+        font-size: 12px;
         font-weight: 500;
         color: #808080;
     }
@@ -125,7 +125,7 @@
     }
     .masthead-nav > li > a {
         margin-top: 0;
-        font-size: 15px;
+        font-size: 12px;
         color: #808080;
     }
     .masthead-nav > li > a.active {
@@ -133,7 +133,7 @@
         border-bottom: none;
     }
     .masthead_ul ul li a{
-        font-size: 15px;
+        font-size: 12px;
         margin-top: 0;
         margin-left: 2px;
     }
