--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -2,8 +2,8 @@
  * Globals
  */
 .headernavul{
-  
-    /*padding-right:30px;*/
+  height:140px;
+      /*padding-right:30px;*/
 }
 .modal-content{
 	padding-top:20px;
@@ -583,7 +583,7 @@ body {
     margin-bottom: 10px;
     margin-left:35px;
     text-align: center;
-    height:90px;
+    height:9px;
     
     
 }
@@ -593,23 +593,21 @@ body {
 }
 .masthead-nav > li {
     display: inline-block;
-    width:100px;
-
+    height:80px;
+    margin-top:60px;
 }
 .masthead-nav > li + li {
-   margin-left:0;
+   margin-left:20px;
 }
-.masthead-nav > li > a {
-
-	height:90px;
+/*.masthead-nav > li > a {
+	height:80px;
 	width:100px;
-    margin-top:40px;
     font-size: 10px;
     font-weight: 500;
-    color: #808080; /* IE8 proofing */
+    color: #808080; 
 
-}
-.masthead-nav > li > a.active {
+}*/
+/*.masthead-nav > li > a.active {
 
     background-color: transparent;
     border-bottom-color: #a9a9a9;
@@ -622,122 +620,157 @@ body {
     background-color: transparent;  
     border-bottom: 4px solid #a9a9a9;
 }
-.masthead-nav > .active > a,
+/*.masthead-nav > .active > a,
 .masthead-nav > .active > a:hover,
 .masthead-nav > .active > a:focus {
 
     color: #fff;  
     border-bottom: 2px solid #a9a9a9;
-}
+}*/
 #homeli > a{
-	height:90px;
+	height:80px;
 	width:70px;
-    margin-top:40px;
     font-size: 10px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
-    padding-left:15px;
-    padding-right:15px;
 }
 #homeli  {
     display: inline-block;
     width:100px;
-    padding-left:20px;
+}
+#homeli > a:hover,a:focus{
+
+	background-color: #fff;
+    border-bottom: 4px solid #a9a9a9;border-image:none;
+}
+#homeli >a.active{
+	
+    background-color: #fff;
+    border-bottom: 4px solid #a9a9a9;border-image:none;
+}
+
+
+#aboutli > a{
+	height:80px;
+	width:80px;
+    font-size: 10px;
+    font-weight: 500;
+    color: #808080; /* IE8 proofing */
+  
+}
+#aboutli  {
+    display: inline-block;
+    width:80px;
+       margin-left:-10px;
+}
+#aboutli > a:hover,a:focus{
+
+	background-color: #fff;
+    border-bottom: 4px solid #a9a9a9;
+    border-image:none;
+}
+#aboutli >a.active{
+	
+    background-color: #fff;
+    border-bottom: 4px solid #a9a9a9;
+    border-image:none;
 }
 #ulli > a:hover,a:focus{
 
 	background-color: #fff;
-    border-bottom-color: #A73D49;
+    border-bottom: 4px solid #A73D49;
+    border-image:none;
 }
 #ulli >a.active{
 	
-    background-color: transparent;
-    border-bottom-color: #A73D49;
+    background-color: #fff;
+    border-bottom: 4px solid #A73D49;
+    border-image:none;
 }
 #ulli > a{
-	height:90px;
-	width:70px;
-    margin-top:40px;
+	height:80px;
+	width:60px;
     font-size: 10px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
-    padding-left:10px;
-    padding-right:5px;
 }
 #ulli{
-	margin-right:-20px;
+  display: inline-block;
+    width:60px;
+    margin-left:30px;
 }
 #awoeli > a:hover,a:focus{
-
-	background-color: transparent;
-    border-bottom-color: #3D5C9A;   	
+	background-color: #fff;
+    border-bottom: 4px solid #3D5C9A;   	
+    border-image:none;
 }
 
 #awoeli >a.active{
-	
-background-color: transparent;
-border-bottom-color: #3D5C9A;
+background-color: #fff;
+border-bottom:4px solid #3D5C9A;
+border-image:none;
 }
 #awoeli > a{
-    height:90px;
-	width:90px;
-    margin-top:40px;
+    height:80px;
+	width:80px;
     font-size: 10px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
-    padding-left:5px;
-    padding-right:5px;
 }
 #awoeli {
 	display: inline-block;
-    width:100px;
-    padding-left:10px;
+	width:80px;
+	margin-left:30px;
 }
 
 #musicli  {
     display: inline-block;
-    width:130px;
-    padding-left:10px;
+    width:120px;
 }
 
 #musicli > a.active{
-	margin-top:3px;
-    width: 130px;
-    height: 90px;
-    border-bottom: none;
-    border-image: url('../images/musicline.jpg') 0 0 5 0 repeat;
-    padding-right:10px;
-    padding-left:10px;
+	background-image: url('../images/musicline2.jpg');
+ /*   border-image: url('../images/musicline.jpg') 0 0 4 0 ;*/
+    height:80px;
+    border-bottom-color:#fff;
 }
 #musicli > a{
-	height:90px;
-	width:130px;
-    margin-top:40px;
+	height:80px;
+	width:120px;
     font-size: 10px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
-    padding-left:5px;
-    padding-right:5px;
-	
+    background-color: #fff;
+
 }
-#musicli >a:hover{
-    margin-top:-3px;
-    height:90px;
-    width:130px;
-    padding-right:5px;
-    padding-left:5px;
-    border-image: url('../images/musicline.jpg') 0 0 5 0 repeat;
+#musicli >a:hover,a:focus{
+   background-image: url('../images/musicline2.jpg');
+/*    border-image: url('../images/musicline.jpg') 0 0 4 0 ;*/
+    height:80px;
+       border-bottom-color:#fff;
+}
+#joinli  {
+    display: inline-block;
+    width:80px;
 }
 #joinli > a {
-    height:90px;
+    height:80px;
 	width:80px;
-    margin-top:40px;
     font-size: 10px;
     font-weight: 500;
     color: #808080; /* IE8 proofing */
-    padding-left:10px;
-    padding-right:10px;
-    margin-left:10px;
+}
+#joinli > a:hover,a:focus{
+
+	background-color: #fff;
+    border-bottom: 4px solid #a9a9a9;
+    border-image:none;
+}
+#joinli >a.active{
+	
+    background-color: #fff;
+    border-bottom: 4px solid #a9a9a9;
+    border-image:none;
 }
 /*
 #musicli:hover{
