--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -727,6 +727,7 @@ border-bottom-color: #3D5C9A;
     padding-right:5px;
     padding-left:5px;
     border-image: url('../images/musicline.jpg') 0 0 5 0 repeat;
+    border-bottom-color: #ff0000;
 }
 #joinli > a {
     height:90px;
