--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -637,8 +637,19 @@ margin-left:0px;
 	position: relative;
     height:50px;
     margin-bottom:-1px;
+
+
+    background-color: #541B2A;
+    margin-top: 0;
+    padding: 15px;
+    font-size: 20px;
+    color: #555;
+
  }
  .musicinner-subtitle img{
- height: inherit;
- width: 100%;
+
+     float: left;
+     margin-top: -10px;
+     height: 40px;
+     width: auto;
  } 
