--- a/manage/css/sb-admin.css
+++ b/manage/css/sb-admin.css
@@ -8,7 +8,7 @@
 
 body {
     margin-top: 100px;
-    background-color: #222;
+    background-color: #ffffff;
 }
 
 @media(min-width:768px) {
@@ -234,7 +234,7 @@ ul.alert-dropdown {
 	font-weight:500;
 	padding-left:45px;
 	color:#ffffff;
-	background:#008080;
+	background:#408080;
 }
 
 /*homepage*/
@@ -434,4 +434,40 @@ ul.alert-dropdown {
 }
 .vl-title7{
 	
+}
+/*departmentlist*/
+.dptl-title1{
+		padding-left:20px ;
+}
+.dptl-title2{
+	
+}
+.dptl-title3{
+
+}
+.dptl-title4{
+	
+}
+.dptl-name{
+	width:25%;
+	border-bottom:1px solid #c0c0c0;
+	padding:40px 10px 20px 20px;
+}
+.dptl-state{
+	width:25%;
+	border-bottom:1px solid #c0c0c0;
+	padding-top:20px;
+	padding-bottom:20px;
+}
+.dptl-seq{
+	width:25%;
+	border-bottom:1px solid #c0c0c0;
+	padding-top:20px;
+	padding-bottom:20px;
+}
+.dptl-edit{
+	width:25%;
+	border-bottom:1px solid #c0c0c0;
+	padding-top:20px;
+	padding-bottom:20px;
 }
