--- a/manage/css/sb-admin.css
+++ b/manage/css/sb-admin.css
@@ -471,3 +471,33 @@ ul.alert-dropdown {
 	padding-top:20px;
 	padding-bottom:20px;
 }
+/*joblist*/
+.jl-name{
+	width:20%;
+	border-bottom:1px solid #c0c0c0;
+	padding:40px 10px 20px 20px;
+}
+.jl-state{
+	width:20%;
+	border-bottom:1px solid #c0c0c0;
+	padding-top:20px;
+	padding-bottom:20px;
+}
+.jl-seq{
+	width:20%;
+	border-bottom:1px solid #c0c0c0;
+	padding-top:20px;
+	padding-bottom:20px;
+}
+.jl-dname{
+		width:20%;
+	border-bottom:1px solid #c0c0c0;
+	padding-top:20px;
+	padding-bottom:20px;
+}
+.jl-edit{
+	width:20%;
+	border-bottom:1px solid #c0c0c0;
+	padding-top:20px;
+	padding-bottom:20px;
+}
