--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -94,7 +94,10 @@
   float: right;
   width: 100%;
   }
-
+.callbacks_container > a:focus{
+background: transparent url("themes2.png") no-repeat left top;;
+border-bottom-color:transparent;
+  }
 .callbacks {
   position: relative;
   list-style: none;
@@ -124,27 +127,34 @@
 .callbacks_nav {
   position: absolute;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  top: 53%;
-  left: -2px;
-  opacity: 0.7;
+  top: 50%;
+  left: 0px;
   z-index: 3;
   text-indent: -9999px;
   overflow: hidden;
   text-decoration: none;
-  height: 38px;
+  height: 60px;
   width: 38px;
-  background: transparent url("http://static.acmedynasty.com/images/home_left.png") no-repeat left top;
+  background: transparent url("themes2.png") no-repeat left top;
   margin-top: -32px;
+  border-bottom-color:transparent;
   }
 
 .callbacks_nav:active {
-  opacity: 1.0;
+    background: transparent url("themes2.png") no-repeat left top;
+    border-bottom-color:transparent;
+    border-bottom:none;
   }
+
 
 .callbacks_nav.next {
   left: auto;
-  background: transparent url("http://static.acmedynasty.com/images/home_right.png") no-repeat right top;
- 
+  background: transparent url("themes2.png") no-repeat right top;
+  right: 0;
+  }
+  .callbacks_nav.next:focus {
+  left: auto;
+  background: transparent url("themes2.png") no-repeat right top;
   right: 0;
   }
 @media screen and (max-width:600px) {
@@ -199,9 +209,18 @@ padding-right:10px;
   width: 100%;
   }
   .musiccallbacks_container > a:hover {
-background: transparent url("color.gif") no-repeat left top;
+background: transparent url("color.png") no-repeat left top;
+  }
+    .musiccallbacks_container > a:focus{
+background: transparent url("color.png") no-repeat left top;;
+border-bottom-color:transparent;
   }
   .music-callbacks_nav.next:hover{
+  left: auto;
+  background-position: right top;
+  right: 15px;
+  }
+  .music-callbacks_nav.next:focus{
   left: auto;
   background-position: right top;
   right: 15px;
@@ -241,31 +260,29 @@ background: transparent url("color.gif") no-repeat left top;
 
 .music-callbacks_nav {
   position: absolute;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0,0,0,0); 
+  opacity:0.7;
   top: 51%;
   left:13px;
-  opacity: 0.3;
   z-index: 3;
   text-indent: -9999px;
   overflow: hidden;
   text-decoration: none;
   height: 61px;
   width: 30px;
-
-  background: transparent url("white.gif") no-repeat left top;
+  background: transparent url("white.png") no-repeat left top;
   margin-top: -39px;
-  }
-
-.music-callbacks_nav:active {
-  background: transparent url("color.gif") no-repeat left top;
-  }
+  } 
 
 .music-callbacks_nav.next {
   left: auto;
   background-position: right top;
   right: 15px;
   }
-
+.music-callbacks_nav >a:active {
+background: transparent url("white.png") no-repeat left top;
+	
+}
 @media screen and (max-width:600px) {
   .music-callbacks_nav {
     top: 100%;
@@ -500,7 +517,23 @@ margin-left:0px;
   float: right;
   width: 100%;
   }
-
+ .ptn-callbacks_container > a:focus{
+background: transparent url("color.png") no-repeat left top;;
+border-bottom-color:transparent;
+  }
+.ptn-callbacks_container > a:hover{
+ background: transparent url("color.png") no-repeat left top;
+  }
+  .ptn-callbacks_nav.next:hover{
+  left: auto;
+  background-position: right top;
+  right: 15px;
+  }
+    .ptn-callbacks_nav.next:focus{
+  left: auto;
+  background-position: right top;
+  right: 15px;
+  }
 .ptn-callbacks {
   position: relative;
   list-style: none;
@@ -531,26 +564,25 @@ margin-left:0px;
   position: absolute;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   top: 60%;
-  left: 0;
-  opacity: 0.3;
+  left: 15px;
   z-index: 3;
   text-indent: -9999px;
   overflow: hidden;
   text-decoration: none;
   height: 61px;
   width: 38px;
-  background: transparent url("themes.gif") no-repeat left top;
+  background: transparent url("white.png") no-repeat left top;
   margin-top: -45px;
   }
 
 .ptn-callbacks_nav:active {
-  opacity: 1.0;
+   background: transparent url("color.png") no-repeat left top;
   }
 
 .ptn-callbacks_nav.next {
   left: auto;
   background-position: right top;
-  right: 0;
+  right: 15px;
   }
  .brandlogo{
  width:25%;
