--- a/bootstrap/css/main2.css
+++ b/bootstrap/css/main2.css
@@ -95,7 +95,11 @@
   width: 100%;
   }
 .callbacks_container > a:focus{
-background: transparent url("themes2.png") no-repeat left top;;
+background: transparent url("home_left.png") no-repeat left top;;
+border-bottom-color:transparent;
+  }
+  .callbacks_container.next > a:focus{
+background: transparent url("home_right.png") no-repeat left top;;
 border-bottom-color:transparent;
   }
 .callbacks {
@@ -135,13 +139,14 @@ border-bottom-color:transparent;
   text-decoration: none;
   height: 60px;
   width: 38px;
-  background: transparent url("themes2.png") no-repeat left top;
+  background: transparent url("home_left.png") no-repeat left top;
   margin-top: -32px;
   border-bottom-color:transparent;
+  opacity:0.7;
   }
 
 .callbacks_nav:active {
-    background: transparent url("themes2.png") no-repeat left top;
+    background: transparent url("home_right.png") no-repeat left top;
     border-bottom-color:transparent;
     border-bottom:none;
   }
@@ -149,12 +154,12 @@ border-bottom-color:transparent;
 
 .callbacks_nav.next {
   left: auto;
-  background: transparent url("themes2.png") no-repeat right top;
+  background: transparent url("home_right.png") no-repeat right top;
   right: 0;
   }
   .callbacks_nav.next:focus {
   left: auto;
-  background: transparent url("themes2.png") no-repeat right top;
+  background: transparent url("home_right.png") no-repeat right top;
   right: 0;
   }
 @media screen and (max-width:600px) {
@@ -669,3 +674,85 @@ border-bottom-color:transparent;
      height: 50px;
      width: 100%;
  } 
+ 
+ /*  ul */
+ .ulcallbacks_container {
+  margin-bottom: 0px;
+  position: relative;
+  float: right;
+  width: 100%;
+  }
+  
+  .ulcallbacks_container > a:hover {
+background: transparent url("color.png") no-repeat left top;
+  }
+  .ulcallbacks_container > a:focus{
+background: transparent url("color.png") no-repeat left top;;
+border-bottom-color:transparent;
+  }
+  .ul-callbacks_nav.next:hover{
+  left: auto;
+  background-position: right top;
+  right: 15px;
+  }
+  .ul-callbacks_nav.next:focus{
+  left: auto;
+  background-position: right top;
+  right: 15px;
+  }
+.ul-callbacks {
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  }
+
+.ul-callbacks li {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  }
+
+.ul-callbacks img {
+  display: block;
+  position: relative;
+  z-index: 1;
+  height: 400px;
+  width:100%;
+  border: 0;
+  }
+
+
+.ul-callbacks_nav {
+  position: absolute;
+  -webkit-tap-highlight-color: rgba(0,0,0,0); 
+  opacity:0.7;
+  top: 51%;
+  left:13px;
+  z-index: 3;
+  text-indent: -9999px;
+  overflow: hidden;
+  text-decoration: none;
+  height: 61px;
+  width: 30px;
+  background: transparent url("white.png") no-repeat left top;
+  margin-top: -39px;
+  } 
+
+.ul-callbacks_nav.next {
+  left: auto;
+  background-position: right top;
+  right: 15px;
+  }
+.ul-callbacks_nav >a:active {
+background: transparent url("white.png") no-repeat left top;
+	
+}
+@media screen and (max-width:600px) {
+  .ul-callbacks_nav {
+    top: 100%;
+    }
+  }
