--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -391,6 +391,7 @@
     margin-bottom: 20px;
     margin-top: 150px;
     text-align: right;
+    color:#808080;
 }
 .footerleftdiv{
     display:inline;
